[doc] Install documentation images

--- a/doc/CMakeLists.txt
+++ b/doc/CMakeLists.txt
@@ -8,3 +8,7 @@ configure_file(_plugins/doxygen.rb.in "${CMAKE_CURRENT_SOURCE_DIR}/_plugins/doxy
 install(DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/_data/schemas
   DESTINATION ${JSON_DOC_INSTALL}
   FILES_MATCHING PATTERN "*.json")
+
+install(DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/images
+  DESTINATION ${CMAKE_INSTALL_DOCDIR}/doxygen-html
+)
