[cmake] Option to force colored output for Clang/GCC

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -57,6 +57,17 @@ option(MC_RTC_DISABLE_NETWORK "Build without network support" OFF)
 
 option(DISABLE_ROS "Build without ROS support (even if ROS was found)" OFF)
 
+# By default, neither clang nor gcc produce color output if they detect the output medium
+# is not a terminal (e.g Ninja).
+option (FORCE_COLORED_OUTPUT "Always produce ANSI-colored output (GNU/Clang only)." OFF)
+if (${FORCE_COLORED_OUTPUT})
+  if ("${CMAKE_CXX_COMPILER_ID}" STREQUAL "GNU")
+    add_compile_options (-fdiagnostics-color=always)
+  elseif ("${CMAKE_CXX_COMPILER_ID}" STREQUAL "Clang")
+    add_compile_options (-fcolor-diagnostics)
+  endif()
+endif()
+
 add_project_dependency(Boost REQUIRED COMPONENTS filesystem timer)
 add_project_dependency(Tasks REQUIRED)
 add_project_dependency(mc_rbdyn_urdf REQUIRED)
