--- a/utils/CMakeLists.txt
+++ b/utils/CMakeLists.txt
@@ -25,6 +25,9 @@ add_mc_rtc_utils(mc_old_bin_to_flat mc_old_bin_to_flat.cpp)
 
 add_mc_rtc_utils(mc_json_to_yaml mc_json_to_yaml.cpp)
 
+add_mc_rtc_utils(mc_bin_compare mc_bin_compare.cpp)
+target_link_libraries(mc_bin_compare PUBLIC Boost::program_options Boost::disable_autolinking)
+
 configure_file(mc_bin_utils.in.cpp "${CMAKE_CURRENT_BINARY_DIR}/mc_bin_utils.cpp")
 set(mc_bin_utils_SRC
   "${CMAKE_CURRENT_BINARY_DIR}/mc_bin_utils.cpp"
