--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -30,7 +30,7 @@ jobs:
       run: |
         ./.clang-format-check.sh
   build:
-    #    needs: clang-format
+    needs: clang-format
     strategy:
       fail-fast: false
       matrix:
