--- a/.github/workflows/package.yml
+++ b/.github/workflows/package.yml
@@ -15,6 +15,9 @@ on:
     - doc/**
     - README.md
     - ".github/workflows/build.yml"
+    - ".github/workflows/sources/*"
+    - ".github/workflows/build-others.yml"
+    - ".github/workflows/docker/*"
     branches:
     - "**"
     tags:
