--- a/.github/workflows/build-others.yml
+++ b/.github/workflows/build-others.yml
@@ -29,12 +29,11 @@ jobs:
         submodules: recursive
     - name: Build within Docker
       run: |
-        set -x
         echo "::group::Setup Dockerfile"
         SOURCE_FOLDER=`pwd`
         cd .github/workflows/docker
         sed -i -e's/@BASE_IMAGE@/${{ matrix.os }}/' Dockerfile
-        sed -i -e"s/@SOURCE_FOLDER@/${pwd}/" Dockerfile
+        sed -i -e"s/@SOURCE_FOLDER@/${SOURCE_FOLDER}/" Dockerfile
         echo "::endgroup::"
         echo "::group::Dockerfile used to build mc_rtc"
         cat Dockerfile
