--- a/doc/_examples/yaml/MetaTask/LIPMStabilizerTask.yaml
+++ b/doc/_examples/yaml/MetaTask/LIPMStabilizerTask.yaml
@@ -39,7 +39,10 @@ Left:
   rotation: [0,0,0]
   height: 0
 Right:
-  rotation: [0,0,0]
+  # Keep the world yaw intact, align roll/pitch with the (flat) ground
+  overwriteRotationRPY:
+    roll: 0
+    pitch: 0
   height: 0
 
 # Weights for the force-distribution QP
