--- a/src/mc_control/fsm/states/data/StabilizerStanding.yaml
+++ b/src/mc_control/fsm/states/data/StabilizerStanding.yaml
@@ -15,12 +15,13 @@ Stabilizer::Standing:
         linear: [0.3,0.3,0.3]
         angular: [0.5,0.5,0.5]
     Left:
-      rotation:
+      # Keep the yaw intact, align roll/pitch with the (flat) ground
+      overwriteRotationRPY:
         roll: 0
         pitch: 0
       height: 0
     Right:
-      rotation:
+      overwriteRotationRPY:
         roll: 0
         pitch: 0
       height: 0
