[ci/windows] Use geos 3.8.1 release

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -109,6 +109,7 @@ jobs:
             - path: leethomason/tinyxml2
               ref: 7.1.0
             - path: libgeos/geos
+              ref: 3.8.1
               options: -DGEOS_ENABLE_TESTS=False
             - path: nanomsg/nanomsg
               ref: 1.1.5
