[Observers] Allow observers to fail

--- a/src/mc_control/samples/LIPMStabilizer/etc/LIPMStabilizer.in.yaml
+++ b/src/mc_control/samples/LIPMStabilizer/etc/LIPMStabilizer.in.yaml
@@ -413,5 +413,13 @@ Observers:
     # Valid entries are [control, estimator, none]
     UpdateFrom: estimator
     FloatingBaseSensor: FloatingBase
-RunObservers: [Encoder, KinematicInertial]
-UpdateObservers: [Encoder, KinematicInertial]
+
+ObserverPipelines:
+- name: "MainPipeline"
+  observers:
+    - type: Encoder
+      # Floating base kinematic-inertial state observation
+    - type: KinematicInertial
+      # Floating base Groundtruth
+    - type: BodySensor
+      bodySensor: FloatingBase
