[doc] Update mc_naoqi interface info

--- a/doc/_data/interfaces.yml
+++ b/doc/_data/interfaces.yml
@@ -20,12 +20,12 @@
     name: mc_vrep
     url: https://github.com/jrl-umi3218/mc_vrep
 - name: NAOqi
-  desc: NAOqi is the programming framework used to program Softbank Robotics robots. The interface allows to use mc_rtc for the whole-body control of the NAO and Pepper robots.
+  desc: NAOqi is the programming framework used to program SoftBank Robotics robots. The mc_naoqi interface allows to use mc_rtc for the whole-body control of the NAO and Pepper robots.
   url: http://doc.aldebaran.com/2-5/index_dev_guide.html
   icon: naoqi.png
   pkg:
-    name: mc_rtc_naoqi
-    url: https://github.com/jrl-umi3218/mc_rtc_naoqi
+    name: mc_naoqi
+    url: https://github.com/jrl-umi3218/mc_naoqi
 - name: UDP Communication
   desc: A generic UDP-based client/server interface implementation. The client is a regular mc_rtc interface that gets data through UDP sockets. The server can easily be implemented to interface with your own robot.<br />The following server implementations are currently available&#58; <ul><li>An OpenRTM server is provided and may be used with HRP robots.</li><li>A server implementation is also available for the <a href="https://hal.archives-ouvertes.fr/hal-02101562">BAZAR</a> robot.</li></ul>
   url: https://openrtm.org/openrtm/
