[LIPMStabilizer] Fix use of overwriteRPY

--- a/src/mc_control/fsm/states/data/StabilizerStanding.yaml
+++ b/src/mc_control/fsm/states/data/StabilizerStanding.yaml
@@ -14,12 +14,12 @@ Stabilizer::Standing:
         angular: [0.5,0.5,0.5]
     Left:
       # Keep the yaw intact, align roll/pitch with the (flat) ground
-      overwriteRotationRPY:
+      overwriteRPY:
         roll: 0
         pitch: 0
       height: 0
     Right:
-      overwriteRotationRPY:
+      overwriteRPY:
         roll: 0
         pitch: 0
       height: 0
