--- a/doc/_config.yml
+++ b/doc/_config.yml
@@ -7,6 +7,7 @@ use_local_libraries: false
 plugins:
     - jekyll-octicons
     - jekyll-sitemap
+    - liquefy
 exclude:
     - Gemfile
     - Gemfile.lock
