--- a/src/mc_control/fsm/states/data/StabilizerStanding.yaml
+++ b/src/mc_control/fsm/states/data/StabilizerStanding.yaml
@@ -25,7 +25,8 @@ Stabilizer::Standing:
       height: 0
 
 ##
-# Make the CoM move to a point centered above both of the robot's feet contact
+# Make the CoM move to a point centered above both of the robot's contact surfaces
+# By default this should be a surface centered in the foot, provided by the robot module
 #
 # Completion:
 # - OK when the dcm reaches the provided threshold
@@ -37,14 +38,14 @@ Stabilizer::GoCenter:
     dcmEval: [0.005, 0.005, 0.05]
 
 ##
-# Make the CoM move to a point above the left foot ankle
+# Make the CoM move to a point above the left contact surface
 ##
 Stabilizer::GoLeft:
   base: Stabilizer::GoCenter
   above: LeftSurface
 
 ##
-# Make the CoM move to a point above the right foot ankle
+# Make the CoM move to a point above the right contact surface
 ##
 Stabilizer::GoRight:
   base: Stabilizer::GoLeft
