[Observers][doc] Update tutorial

--- a/doc/_config.yml
+++ b/doc/_config.yml
@@ -8,6 +8,7 @@ plugins:
     - jekyll-octicons
     - jekyll-sitemap
     - liquefy
+    - jekyll_inline_highlight
 exclude:
     - Gemfile
     - Gemfile.lock
