[tests] Setup observers pipeline in Python test

--- a/tests/controllers/CMakeLists.txt
+++ b/tests/controllers/CMakeLists.txt
@@ -240,7 +240,8 @@ set(RUN_OBSERVERS "")
 set(UPDATE_OBSERVERS "")
 
 # Test Python bindings
-if(${PYTHON_BINDING})
+if(PYTHON_BINDING)
+  file(READ "ObserverPipelinesPython.json" OBSERVER_PIPELINES)
   set(USE_SANDBOX "false")
   get_python_names(python_names)
   foreach(PYTHON ${python_names})
@@ -284,4 +285,5 @@ if(${PYTHON_BINDING})
       add_test(NAME Test${PYTHON}Log COMMAND python "${CMAKE_CURRENT_SOURCE_DIR}/check_log.py" "${TEST_CONTROLLER_NAME}" ${NRITER} "${UTILS_BIN_DIR}")
     endif()
   endforeach()
+  unset(OBSERVER_PIPELINES)
 endif()
