--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -296,6 +296,8 @@ set(mc_trajectory_HDR
 ../include/mc_trajectory/InterpolatedRotation.h
 ../include/mc_trajectory/spline_utils.h
 ../include/mc_trajectory/ExactCubic.h
+../include/mc_trajectory/SequentialInterpolator.h
+../include/mc_trajectory/LinearInterpolation.h
 )
 
 add_library(mc_trajectory SHARED ${mc_trajectory_SRC} ${mc_trajectory_HDR})
