[samples/HMC] Adapt CoMTrajectoryGeneration to mc_rtc 1.5

--- a/src/mc_control/samples/CoMTrajectoryGeneration/etc/CoMTrajectoryGeneration.in.yaml
+++ b/src/mc_control/samples/CoMTrajectoryGeneration/etc/CoMTrajectoryGeneration.in.yaml
@@ -68,5 +68,8 @@ transitions:
 init: Pause_2s
 
 # State observation
-RunObservers: [Encoder, KinematicInertial]
-UpdateObservers: [Encoder, KinematicInertial]
+ObserverPipelines:
+- name: MainPipeline
+  observers:
+    - type: Encoder
+    - type: KinematicInertial
