[aliases] Generate env robot for objects

--- a/src/mc_control/samples/Admittance/etc/AdmittanceSample.in.yaml
+++ b/src/mc_control/samples/Admittance/etc/AdmittanceSample.in.yaml
@@ -207,5 +207,9 @@ transitions:
 init: RightHandToWall
 
 # Observers pipeline
-RunObservers: [Encoder, KinematicInertial]
-UpdateObservers: [Encoder, KinematicInertial]
+ObserverPipelines:
+  name: MainRobotObservation
+  gui: true
+  observers:
+    - type: Encoder
+    - type: KinematicInertial
