--- a/src/mc_robots/CMakeLists.txt
+++ b/src/mc_robots/CMakeLists.txt
@@ -16,15 +16,17 @@ endmacro()
 add_robot(env)
 add_robot(json)
 
-macro(generate_aliases PATH VAR NAME FILE_IN FILE_OUT)
+macro(append_aliases PATH VAR NAME)
   file(GLOB URDF_FILES ${PATH}/urdf/*.urdf)
-  set(${VAR})
   foreach(URDF ${URDF_FILES})
     get_filename_component(URDF_NAME "${URDF}" NAME_WE)
     list(APPEND ${VAR} "${NAME}/${URDF_NAME}: [${NAME}, ${PATH}, ${URDF_NAME}]")
   endforeach()
   string(REPLACE ";" "\n" ${VAR} "${${VAR}}")
+endmacro()
 
+macro(generate_aliases PATH ALIASES FILE_IN FILE_OUT)
+  set(${ALIASES})
   set(PATH_OUT "${CMAKE_CURRENT_BINARY_DIR}/aliases/${FILE_OUT}")
   configure_file("${FILE_IN}" "${PATH_OUT}")
   if(CMAKE_CONFIGURATION_TYPES)
@@ -33,8 +35,12 @@ macro(generate_aliases PATH VAR NAME FILE_IN FILE_OUT)
   install(FILES "${PATH_OUT}" DESTINATION "${MC_ROBOTS_INSTALL_PREFIX}/aliases/")
 endmacro()
 
-generate_aliases("${MC_ENV_DESCRIPTION_PATH}" ENV_ALIASES env env_aliases.in.yml env_aliases.yml)
-generate_aliases("${MC_INT_OBJ_DESCRIPTION_PATH}" OBJECT_ALIASES object object_aliases.in.yml object_aliases.yml)
+append_aliases("${OBJECT_ALIASES}" ENV_ALIASES env)
+generate_aliases("${MC_INT_OBJ_DESCRIPTION_PATH}" ${OBJECT_ALIASES} object object_aliases.in.yml object_aliases.yml)
+
+append_aliases("${MC_ENV_DESCRIPTION_PATH}" ENV_ALIASES env)
+append_aliases("${MC_INT_OBJ_DESCRIPTION_PATH}" ENV_ALIASES env)
+generate_aliases("${MC_ENV_DESCRIPTION_PATH}" ${ENV_ALIASES} env_aliases.in.yml env_aliases.yml)
 
 find_description_package(jvrc_description)
 add_robot(jvrc1)
