--- a/src/mc_control/CMakeLists.txt
+++ b/src/mc_control/CMakeLists.txt
@@ -19,6 +19,7 @@ if(${BUILD_CONTROLLER_SAMPLES})
   add_subdirectory(samples/FSM)
   add_subdirectory(samples/LIPMStabilizer)
   add_subdirectory(samples/Admittance)
+  add_subdirectory(samples/Door)
 endif()
 
 add_subdirectory(HalfSitPose)
