--- a/src/mc_observers/CMakeLists.txt
+++ b/src/mc_observers/CMakeLists.txt
@@ -6,7 +6,7 @@ macro(add_observer observer_base)
   set_target_properties(${observer_base} PROPERTIES COMPILE_FLAGS "-DMC_OBSERVER_EXPORTS" PREFIX "")
   target_link_libraries(${observer_base} PUBLIC mc_rbdyn mc_rtc_gui mc_control mc_filter)
   target_include_directories(${observer_base} PUBLIC $<INSTALL_INTERFACE:include> $<BUILD_INTERFACE:${PROJECT_SOURCE_DIR}/include/mc_observers>)
-  install(TARGETS ${observer_base} DESTINATION ${MC_OBSERVERS_INSTALL_PREFIX})
+  install(TARGETS ${observer_base} EXPORT mc_rtc_observers DESTINATION ${MC_OBSERVERS_INSTALL_PREFIX})
 endmacro()
 
 add_observer(EncoderObserver)
@@ -15,3 +15,9 @@ add_observer(KinematicInertialPoseObserver)
 add_observer(KinematicInertialObserver)
 target_link_libraries(KinematicInertialObserver PUBLIC KinematicInertialPoseObserver)
 set_target_properties(KinematicInertialObserver PROPERTIES INSTALL_RPATH ${MC_OBSERVERS_INSTALL_PREFIX})
+
+install(
+  EXPORT mc_rtc_observers
+  NAMESPACE mc_observers::
+  DESTINATION "${CONFIG_INSTALL_DIR}"
+)
